[SGMR-X] LLM API 장애 전파를 위한 서킷브레이커 도입 (#155)
* refactor: LLM 서버에 대한 서킷브레이커 추가 설계

* refactor: 2 -> 3분으로 LLM 서버와 통신 시 소켓 타임아웃 연장